# same-code-different-performance

./: Cargo.toml  README.md  run.sh
benches/: bench.rs  factorial.rs
src/: lib.rs  main.rs
