[package]
name = "same-code-different-performance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bench]]
name = "factorial"
harness = false

[dev-dependencies]
criterion = "0.5.1"
paste = "1.0.14"
